# DocumentAnnotationTool

./: .gitignore  CMakeLists.txt  Docanto.sln  DocumentAnnotationTool.sln  README.md  setup.cmd
DocantoCLI/: CMakeLists.txt  DocantoCLI.vcxproj
DocantoCLI/src/: main.cpp
DocantoLib/: CMakeLists.txt  DocantoLib.vcxproj  DocantoLib.vcxproj.filters
DocantoLib/include/: DocantoLib.h
DocantoLib/include/general/: BasicRender.h  Common.h  File.h  Image.h  Logger.h  MathHelper.h  ReadWriteMutex.h  ThreadSafeWrapper.h  Timer.h
DocantoLib/include/pdf/: PDF.h  PDFAnnotation.h  PDFContext.h  PDFRenderer.h
DocantoLib/src/: Docanto.ixx  DocantoLib.h
DocantoLib/src/general/: CMakeLists.txt  Common.h  Common.ixx  File.cpp  File.h  FileHandler.cpp  FileHandler.ixx  Image.cpp  Logger.cpp  Logger.ixx  MathHelper.h  Timer.cpp  Timer.ixx
DocantoLib/src/pdf/: CMakeLists.txt  PDF.cpp  PDFAnnotation.cpp  PDFContext.cpp  PDFRenderer.cpp
DocantoWin/: CMakeLists.txt  DocantoWin.vcxproj  DocantoWin.vcxproj.filters  packages.config
DocantoWin/rsc/: Resource.rc  resource.h
DocantoWin/src/: include.h  main.cpp
DocantoWin/src/helper/: AppVariables.cpp  AppVariables.h  Context.h  Geometry.h  TabHandler.cpp  TabHandler.h
DocantoWin/src/pdf/: PDFHandler.cpp  PDFHandler.h  ToolHandler.cpp  ToolHandler.h
DocantoWin/src/ui/: Caption.cpp  Caption.h  GenericUIObject.cpp  GenericUIObject.h  Gesture.cpp  Gesture.h  TestElement.cpp  TestElement.h  UIContainer.cpp  UIContainer.h  UIDebug.cpp  UIDebug.h  UIHandler.cpp  UIHandler.h  UIPDFManager.cpp  UIPDFManager.h  UIToolbar.cpp  UIToolbar.h
DocantoWin/src/win/: Direct2D.cpp  Direct2D.h  DirectManipulationHandler.cpp  DirectManipulationHandler.h  MainWindowHandler.cpp  MainWindowHandler.h  TSFHandler.cpp  TSFHandler.h  Window.cpp  Window.h  include.h
DocumentAnnotationTool/: DocumentAnnotationTool.args.json  DocumentAnnotationTool.vcxproj  DocumentAnnotationTool.vcxproj.filters  TODO.md
DocumentAnnotationTool/rsc/: resource.rc
DocumentAnnotationTool/src/: MainWindow.cpp  MainWindow.h  main.cpp
DocumentAnnotationTool/src/dependencies/: Macros.h  MagicEnum.h  ThreadSafeClass.h
DocumentAnnotationTool/src/helper/: Direct2D.cpp  FileHandler.cpp  GestureHandler.cpp  Logger.cpp  MemoryWatch.cpp  MuPDF.cpp  PDFHandler.cpp  ReadWriteRecursiveMutex.h  Renderer.cpp  StrokeHandler.cpp  Timer.cpp  Window.cpp  Wrapper.cpp  include.h
DocumentAnnotationTool/src/helper/General/: AppVariables.cpp  AppVariables.h  FileHandler.cpp  FileHandler.h  General.h  Logger.h  Math.h  Renderer.h  Timer.cpp  Timer.h
DocumentAnnotationTool/src/helper/PDF/: GestureHandler.cpp  GestureHandler.h  MuPDF.cpp  MuPDF.h  PDF.h  PDFRenderHandler.cpp  PDFRenderHandler.h  PenHandler.cpp  PenHandler.h  StrokeHandler.cpp  StrokeHandler.h  Wrapper.cpp
DocumentAnnotationTool/src/helper/UI/: CaptionHandler.cpp  CaptionHandler.h  UI.h  UIHandler.cpp  UIHandler.h
DocumentAnnotationTool/src/helper/Windows/: Direct2D.cpp  Direct2D.h  Renderer.cpp  Window.cpp  WindowHandler.h
Test/: Test.vcxproj  Test.vcxproj.filters  main.cpp
